--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,8 +58,11 @@
             </div>
         </div>
         }
+         <div style="color: red; margin-bottom: 20px;">{{errorMsg}}</div>
           
             <div #mfeContainer style="position: relative;"> 
+
+           
         </div>
           
       </div>
